tests/snapshots/load__lottie_bodymovin.snap
---
source: tests/load.rs
expression: loaded
---
Bodymovin {
    in_point: 0.0,
    out_point: 103.0,
    frame_rate: 30.0,
    width: 1820,
    is_3d: false,
    height: 275,
    version: "4.0.0",
    name: None,
    layers: [
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        PreComp(
            PreComp,
        ),
        Shape(
            Shape {
                transform: Transform {
                    anchor_point: Property {
                        value: Fixed(
                            [
                                910.25,
                                137.75,
                                0.0,
                            ],
                        ),
                        expression: None,
                        index: None,
                    },
                    position: Property {
                        value: Fixed(
                            [
                                910.0,
                                137.5,
                                0.0,
                            ],
                        ),
                        expression: None,
                        index: None,
                    },
                    scale: Property {
                        value: Fixed(
                            [
                                100.0,
                                100.0,
                                100.0,
                            ],
                        ),
                        expression: None,
                        index: None,
                    },
                    rotation: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    opacity: Property {
                        value: Fixed(
                            100.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    position_x: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    position_y: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    position_z: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    skew: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                    skew_axis: Property {
                        value: Fixed(
                            0.0,
                        ),
                        expression: None,
                        index: None,
                    },
                },
                bounds: Some(
                    Bounds {
                        left: 0.0,
                        top: 0.0,
                        bottom: 276.0,
                        right: 1821.0,
                    },
                ),
                auto_orient: false,
                blend_mode: Normal,
                is_3d: false,
                index: 11,
                html_class: None,
                html_id: None,
                in_point: 0.0,
                out_point: 6300.0,
                start_time: 0.0,
                name: Some(
                    "bg Outlines",
                ),
                masks: [],
                effects: [],
                stretch: 1.0,
                parent: None,
                shapes: [
                    Group(
                        Group {
                            match_name: None,
                            name: Some(
                                "Group 1",
                            ),
                            number_of_properties: None,
                            items: [
                                Shape(
                                    Shape {
                                        match_name: None,
                                        name: Some(
                                            "Path 1",
                                        ),
                                        direction: None,
                                        closed: Some(
                                            true,
                                        ),
                                        vertices: Property {
                                            value: Fixed(
                                                ShapeValue {
                                                    closed: None,
                                                    in_point: [
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                    ],
                                                    out_point: [
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                        (
                                                            0.0,
                                                            0.0,
                                                        ),
                                                    ],
                                                    vertices: [
                                                        (
                                                            -910.0,
                                                            137.5,
                                                        ),
                                                        (
                                                            910.0,
                                                            137.5,
                                                        ),
                                                        (
                                                            910.0,
                                                            -137.5,
                                                        ),
                                                        (
                                                            -910.0,
                                                            -137.5,
                                                        ),
                                                    ],
                                                },
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                    },
                                ),
                                Fill(
                                    Fill {
                                        match_name: None,
                                        name: Some(
                                            "Fill 1",
                                        ),
                                        fill_enabled: Some(
                                            true,
                                        ),
                                        opacity: Property {
                                            value: Fixed(
                                                100.0,
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        color: Property {
                                            value: Fixed(
                                                [
                                                    88.0,
                                                    214.0,
                                                    112.0,
                                                    255.0,
                                                ],
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                    },
                                ),
                                Transform(
                                    Transform {
                                        name: None,
                                        anchor_point: Property {
                                            value: Fixed(
                                                [
                                                    0.0,
                                                    0.0,
                                                ],
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        position: Property {
                                            value: Fixed(
                                                [
                                                    910.25,
                                                    137.75,
                                                ],
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        scale: Property {
                                            value: Fixed(
                                                [
                                                    100.0,
                                                    100.0,
                                                ],
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        rotation: Property {
                                            value: Fixed(
                                                0.0,
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        opacity: Property {
                                            value: Fixed(
                                                100.0,
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        skew: Property {
                                            value: Fixed(
                                                0.0,
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                        skew_axis: Property {
                                            value: Fixed(
                                                0.0,
                                            ),
                                            expression: None,
                                            index: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
}
